# recursive-companion-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  API_EXAMPLES.md  ARCHITECTURE.md  AUTOMATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERGENCE_EXTRACTION_PATTERN.md  CREDITS.md  Dockerfile  Dockerfile.backup  FASTMCP_MIGRATION_COMPLETE.md  FASTMCP_MIGRATION_STRATEGY.md  LICENSE  MIGRATION_QUICK_START.md  MIGRATION_REPORT.md  QUICKSTART.md  README.md  SECURITY.md  TEST_MIGRATION_STRATEGY.md  docker-compose.yml  example_usage.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.sh  setup_github.sh  start_http_server.sh  test_converse.py  test_integration.py  test_server.py  test_tool_refinement.py  uv.toml  verify.py  (+1 more)
.claude/: agents.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  dependency-update.yml  quality-gate.yml  release.yml  security.yml
docs/: STREAMABLE_HTTP_TRANSPORT.md
scripts/: setup_check.py  update_version.py  validate_workflows.py
src/: __init__.py  base_cognitive.py  bedrock_client.py  circuit_breaker.py  config.py  configuration_manager.py  convergence.py  cot_enhancement.py  domains.py  error_handling.py  incremental_engine.py  internal_cot.py  progress_tracker.py  refine_engine.py  security_utils.py  server.py  session_manager.py  session_persistence.py  validation.py
src/recursive_companion_mcp/: __init__.py  __main__.py  config.py  decorators.py  formatting.py
src/recursive_companion_mcp/auth/: __init__.py  middleware.py  models.py  oauth21.py
src/recursive_companion_mcp/clients/: __init__.py  bedrock.py
src/recursive_companion_mcp/core/: __init__.py  base_cognitive.py  circuit_breaker.py  configuration_manager.py  convergence.py  cot_enhancement.py  domains.py  errors.py  internal_cot.py  persistence.py  refinement_types.py  server.py  session_manager.py  validation.py
src/recursive_companion_mcp/engines/: __init__.py  incremental.py  refine.py
src/recursive_companion_mcp/legacy/: __init__.py  base_cognitive.py  bedrock_client.py  error_handling.py  incremental_engine.py  progress_tracker.py  refine_engine.py  server.py  session_manager.py  validation.py
src/recursive_companion_mcp/tools/: __init__.py  control.py  convenience.py  refinement.py  results.py  sessions.py
src/recursive_companion_mcp/transport/: __init__.py  streamable_http.py
src/recursive_companion_mcp/transports/: __init__.py  http_server.py
tests/: test_100_percent_coverage.py  test_abort_refinement.py  test_base_cognitive.py  test_bedrock_client_complete_coverage.py  test_circuit_breaker.py  test_circuit_breaker_coverage.py  test_convergence.py  test_convergence_coverage.py  test_cot_enhancement.py  test_extracted_modules.py  test_focused_coverage.py  test_incremental_engine_extended.py  test_incremental_engine_surgical.py  test_internal_cot.py  test_mcp_handlers.py  test_refine_engine_coverage.py  test_refinement.py  test_security_features.py  test_security_utils_coverage.py  test_server.py  test_server_edge_cases.py  test_server_extended.py  test_session_persistence.py  test_streamable_http.py
